# casbin-rb-adapter

./: Cargo.toml  README.md  examples.env
examples/: mysql_sample.rs
sql/: mssql.sql  mysql.sql  sqlite.sql
src/: actions.rs  adapter.rs  lib.rs  models.rs  utils.rs
