[package]
authors = ["plucky"]
name = "casbin-rb-adapter"
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "casbin",
    "adapter",
    "rbatis",
    "rbac",
    "database",
]
description = "Rbatis adapter for casbin, support database save and load rules."
repository = "https://github.com/cody-why/casbin-rb-adapter"
documentation = "https://docs.rs/crate/casbin-rb-adapter/"

[dependencies]
casbin = { version = "2", default-features = false}
serde = { version = "1", features = ["derive"] }
async-trait = "0"
# rbatis integration
rbatis = "4"
rbs = "4"
tracing = "0.1"

[dev-dependencies]
casbin-rb-adapter = {path = "./", features = ["tracing"]}
tokio = { version = "1", features = ["macros"] }
rbdc-mysql = "4"
tracing-subscriber = "0"

[features]
default = ["runtime-tokio"]
tracing = []
runtime-tokio = ["casbin/runtime-tokio"]
runtime-async-std= ["casbin/runtime-async-std"]